--- a/themes/default2.0/admin/edit.html
+++ b/themes/default2.0/admin/edit.html
@@ -53,7 +53,7 @@
 				</div>
 				<div class="form-group">
 					<label for="exampleInputEmail2">永久链接</label>
-					<input type="text" class="form-control" name="link" id="link" placeholder="" value='0.5'  style="vertical-align:left !important;" required="true">
+					<input type="text" class="form-control" name="link" id="link" placeholder="" value=""  style="vertical-align:left !important;" required="true">
 				</div>
 				<div class="form-group">
 					<label for="exampleInputEmail2">创建日期</label>
