--- a/themes/default2.0/admin/index.html
+++ b/themes/default2.0/admin/index.html
@@ -72,7 +72,7 @@
 				</div>
 				<div class="form-group">
 					<label for="exampleInputEmail2">永久链接</label>
-					<input type="text" class="form-control" name="link" id="link" placeholder="" required="true">
+					<input type="text" class="form-control" name="link" id="link" value="yongjiu"  placeholder="" required="true">
 				</div>
 				<div class="form-group">
 					<label for="exampleInputEmail2">创建日期</label>
