--- a/themes/default2.0/article.html
+++ b/themes/default2.0/article.html
@@ -121,7 +121,7 @@
 											<div class="adt">By
 												<span class="vcard author">
 													<span class="fn">
-														<a href="#" title="由admin发布" rel="author">admin</a></span>
+														<a href="#" title="由隐私专家发布" rel="author">yszj</a></span>
 												</span>
 												<span class="meta-sep">|</span>
 												<span class="date updated">{{ &articleSingle.createDate10 }}</span></div>
